# clawhive

./: .gitignore  Cargo.toml  PLAN.md  README.md  contoh_tugas_test.md  install.ps1  install.sh  jangan dirujuk mentah-mentah, tapi adaptasikan.md  publish.sh  session-ses_0f83.md  uninstall.ps1  uninstall.sh  update.ps1  update.sh  vector.toml
.github/workflows/: publish.yml  release.yml
assets/: clawhive-gold-gradient.ans  clawhive.txt
crates/claw10-agent/: Cargo.toml
crates/claw10-agent/src/: context.rs  error.rs  executor.rs  lib.rs  runtime.rs  session.rs  store.rs  store_test.rs
crates/claw10-artifact/: Cargo.toml
crates/claw10-artifact/src/: lib.rs  lib_test.rs
crates/claw10-auth/: Cargo.toml
crates/claw10-auth/src/: credential.rs  error.rs  identity.rs  lib.rs  lib_test.rs  rbac.rs
crates/claw10-budget/: Cargo.toml
crates/claw10-budget/src/: lib.rs  lib_test.rs
crates/claw10-cli/: Cargo.toml
crates/claw10-cli/src/: main.rs  service.rs  setup.rs  setup_wizard.rs  telemetry_layer.rs  update.rs
crates/claw10-context/: Cargo.toml
crates/claw10-context/src/: lib.rs  lib_test.rs
crates/claw10-control-api/: Cargo.toml
crates/claw10-control-api/src/: error.rs  handlers.rs  lib.rs  router.rs  state.rs  store.rs  telegram_poller.rs
crates/claw10-control-api/src/handlers/: agent.rs  approval.rs  artifact.rs  gateway.rs  health.rs  lifecycle.rs  lineage.rs  memory.rs  mission.rs  policy.rs  scheduler.rs  skill.rs  spawn.rs  task.rs  worker.rs
crates/claw10-control-api/src/middleware/: auth.rs
crates/claw10-domain/: Cargo.toml
crates/claw10-domain/src/: agent.rs  approval.rs  artifact.rs  error.rs  evidence.rs  identity.rs  lifecycle.rs  lineage.rs  memory.rs  mission.rs  model.rs  permissions.rs  policy.rs  skill.rs  spawn.rs  task.rs  tenant.rs  tool.rs  worker.rs  workspace.rs
crates/claw10-event/: Cargo.toml
crates/claw10-event/src/: bus.rs  events.rs  inmemory.rs  inmemory_test.rs  lib.rs  nats.rs  nats_test.rs
crates/claw10-gateway/: Cargo.toml
crates/claw10-gateway/src/: lib.rs
crates/claw10-icvs/: Cargo.toml  README.md
crates/claw10-icvs/src/: lib.rs  lib_test.rs
crates/claw10-lifecycle/: Cargo.toml
crates/claw10-lifecycle/src/: lib.rs
crates/claw10-lineage/: Cargo.toml
crates/claw10-lineage/src/: lib.rs
crates/claw10-memory/: Cargo.toml
crates/claw10-memory/src/: admission.rs  admission_test.rs  lib.rs
crates/claw10-mission/: Cargo.toml
crates/claw10-mission/src/: lib.rs
crates/claw10-model-router/: Cargo.toml
crates/claw10-model-router/models/: anthropic.rs  deepseek.rs  gemini.rs  mistral.rs  nvidia.rs  ollama.rs  openai.rs  openrouter.rs  perplexity.rs  xai.rs
crates/claw10-model-router/src/: config.rs  config_test.rs  error.rs  lib.rs  openai_compat.rs  provider.rs  providers.rs  router.rs
crates/claw10-policy/: Cargo.toml
crates/claw10-policy/src/: lib.rs
crates/claw10-prompt/: Cargo.toml
crates/claw10-prompt/prompts/: base_kernel.icvs  bootstrap.icvs  distillation.icvs  injection.icvs  roles.icvs
crates/claw10-prompt/src/: assembler.rs  assembler_test.rs  bundle.rs  bundle_test.rs  lib.rs  lib_test.rs  policy_digest.rs  policy_digest_test.rs  registry.rs  registry_test.rs  validation.rs  validation_test.rs
crates/claw10-prompt/src/prompts/: base_kernel.rs  base_kernel_test.rs  bootstrap.rs  bootstrap_test.rs  contracts.rs  distillation.rs  distillation_test.rs  lifecycle.rs  lifecycle_test.rs  mod.rs  roles.rs  roles_test.rs
crates/claw10-scheduler/: Cargo.toml
crates/claw10-scheduler/src/: lib.rs
crates/claw10-skill/: Cargo.toml
crates/claw10-skill/src/: lib.rs  lib_test.rs
crates/claw10-spawn/: Cargo.toml
crates/claw10-spawn/src/: broker.rs  descendant.rs  error.rs  lib.rs  validator.rs
crates/claw10-store/: Cargo.toml
crates/claw10-store/src/: lib.rs  lib_test.rs  namespaced.rs
crates/claw10-task/: Cargo.toml
crates/claw10-task/src/: lib.rs
crates/claw10-telemetry/: Cargo.toml
crates/claw10-telemetry/src/: lib.rs  lib_test.rs
crates/claw10-tool/: Cargo.toml
crates/claw10-tool/src/: builtin.rs  context.rs  error.rs  lib.rs  registry.rs
crates/claw10-tool/src/builtin/: artifact.rs  filesystem.rs  http.rs  shell.rs
crates/claw10-toon/: Cargo.toml
crates/claw10-toon/src/: lib.rs  lib_test.rs
crates/claw10-tui/: Cargo.toml
crates/claw10-tui/src/: lib.rs  setup_wizard.rs  spawn_tool.rs  tui_agent.rs
crates/claw10-tui/src/app/: commands.rs  events.rs  mod.rs  model_selection.rs  palette.rs
crates/claw10-tui/src/setup_wizard/: draw.rs  handlers.rs  mod.rs
crates/claw10-tui/src/ui/: chat.rs  components.rs  home.rs  mod.rs  screens.rs
crates/claw10-worker/: Cargo.toml
crates/claw10-worker/src/: lib.rs
crates/clawhive-agent/: Cargo.toml
crates/clawhive-agent/src/: context.rs  events.rs  executor.rs  lib.rs  runtime.rs  session.rs
crates/clawhive-artifact/: Cargo.toml
crates/clawhive-artifact/src/: lib.rs
crates/clawhive-audit/: Cargo.toml
crates/clawhive-audit/src/: lib.rs
crates/clawhive-auth/src/: credential.rs  identity.rs  rbac.rs
crates/clawhive-cli/: Cargo.toml
crates/clawhive-context/: Cargo.toml
crates/clawhive-control-api/: Cargo.toml
crates/clawhive-gateway/: Cargo.toml
crates/clawhive-icvs/: Cargo.toml
crates/clawhive-lifecycle/: Cargo.toml
crates/clawhive-memory/: Cargo.toml
crates/clawhive-model-router/: Cargo.toml
crates/clawhive-policy/: Cargo.toml
crates/clawhive-prompt/: Cargo.toml
crates/clawhive-scheduler/: Cargo.toml
crates/clawhive-skill/: Cargo.toml
crates/clawhive-spawn/: Cargo.toml
crates/clawhive-store/: Cargo.toml
crates/clawhive-telemetry/: Cargo.toml
crates/clawhive-toon/: Cargo.toml
crates/clawhive-tui/: Cargo.toml
crates/clawhive-worker/: Cargo.toml
examples/: claw10.config.toml  clawhive.config.toml
models/: mappings.json  nvidia.json
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: e2e_http_api.rs  e2e_spawn_approve_lifecycle.rs  gateway.rs  gateway_webhook_agent.rs  lifecycle.rs  memory.rs  policy.rs  real_api_test.rs  scheduler.rs  spawn.rs  worker.rs
(+99 files in other folders)
