[workspace]
resolver = "2"
members = [
    "crates/clawhive-domain",
    "crates/clawhive-control-api",
    "crates/clawhive-auth",
    "crates/clawhive-mission",
    "crates/clawhive-task",
    "crates/clawhive-scheduler",
    "crates/clawhive-agent",
    "crates/clawhive-lifecycle",
    "crates/clawhive-spawn",
    "crates/clawhive-lineage",
    "crates/clawhive-policy",
    "crates/clawhive-icvs",
    "crates/clawhive-context",
    "crates/clawhive-toon",
    "crates/clawhive-model-router",
    "crates/clawhive-memory",
    "crates/clawhive-skill",
    "crates/clawhive-tool",
    "crates/clawhive-worker",
    "crates/clawhive-artifact",
    "crates/clawhive-budget",
    "crates/clawhive-telemetry",
    "crates/clawhive-gateway",
    "crates/clawhive-cli",
    "crates/clawhive-tui",
    "crates/clawhive-store",
    "crates/clawhive-prompt",
    "crates/clawhive-event",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ClawHive Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
nats = "0.26"
opentelemetry = "0.27"
schemars = "0.8"
derivative = "2"
strum = { version = "0.27", features = ["derive"] }
cron = "0.15"
chrono-tz = "0.10"
sled = "0.34"
bincode = "1"
async-trait = "0.1"
icvs = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing-appender = "0.2"
toml = "0.8"
dirs = "6.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
