[workspace]
resolver = "2"
members = [
    "crates/claw10-domain",
    "crates/claw10-control-api",
    "crates/claw10-auth",
    "crates/claw10-mission",
    "crates/claw10-task",
    "crates/claw10-scheduler",
    "crates/claw10-agent",
    "crates/claw10-lifecycle",
    "crates/claw10-spawn",
    "crates/claw10-lineage",
    "crates/claw10-policy",
    "crates/claw10-icvs",
    "crates/claw10-context",
    "crates/claw10-toon",
    "crates/claw10-model-router",
    "crates/claw10-memory",
    "crates/claw10-skill",
    "crates/claw10-tool",
    "crates/claw10-worker",
    "crates/claw10-artifact",
    "crates/claw10-budget",
    "crates/claw10-telemetry",
    "crates/claw10-gateway",
    "crates/claw10-cli",
    "crates/claw10-tui",
    "crates/claw10-store",
    "crates/claw10-prompt",
    "crates/claw10-event",
    "tests",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Claw10 Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
nats = "0.26"
opentelemetry = "0.27"
schemars = "0.8"
derivative = "2"
strum = { version = "0.27", features = ["derive"] }
cron = "0.15"
chrono-tz = "0.10"
sled = "0.34"
bincode = "1"
async-trait = "0.1"
icvs = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing-appender = "0.2"
toml = "0.8"
dirs = "6.0"
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
