[workspace]
resolver = "2"
members = [
    "crates/claw10-domain",
    "crates/claw10-control-api",
    "crates/claw10-auth",
    "crates/claw10-mission",
    "crates/claw10-task",
    "crates/claw10-scheduler",
    "crates/claw10-agent",
    "crates/claw10-lifecycle",
    "crates/claw10-spawn",
    "crates/claw10-lineage",
    "crates/claw10-policy",
    "crates/claw10-icvs",
    "crates/claw10-context",
    "crates/claw10-toon",
    "crates/claw10-model-router",
    "crates/claw10-memory",
    "crates/claw10-skill",
    "crates/claw10-tool",
    "crates/claw10-worker",
    "crates/claw10-artifact",
    "crates/claw10-budget",
    "crates/claw10-telemetry",
    "crates/claw10-gateway",
    "crates/claw10-cli",
    "crates/claw10-tui",
    "crates/claw10-store",
    "crates/claw10-prompt",
    "crates/claw10-event",
    "tests",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Claw10 Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
nats = "0.26"
opentelemetry = "0.27"
schemars = "0.8"
derivative = "2"
strum = { version = "0.27", features = ["derive"] }
cron = "0.15"
chrono-tz = "0.10"
sled = "0.34"
bincode = "1"
async-trait = "0.1"
icvs = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing-appender = "0.2"
toml = "0.8"
dirs = "6.0"
dotenvy = "0.15"

claw10-agent = { version = "0.2.0", path = "crates/claw10-agent" }
claw10-artifact = { version = "0.2.0", path = "crates/claw10-artifact" }
claw10-auth = { version = "0.2.0", path = "crates/claw10-auth" }
claw10-budget = { version = "0.2.0", path = "crates/claw10-budget" }
claw10-cli = { version = "0.2.0", path = "crates/claw10-cli" }
claw10-context = { version = "0.2.0", path = "crates/claw10-context" }
claw10-control-api = { version = "0.2.0", path = "crates/claw10-control-api" }
claw10-domain = { version = "0.2.0", path = "crates/claw10-domain" }
claw10-event = { version = "0.2.0", path = "crates/claw10-event" }
claw10-gateway = { version = "0.2.0", path = "crates/claw10-gateway" }
claw10-icvs = { version = "0.2.0", path = "crates/claw10-icvs" }
claw10-lifecycle = { version = "0.2.0", path = "crates/claw10-lifecycle" }
claw10-lineage = { version = "0.2.0", path = "crates/claw10-lineage" }
claw10-memory = { version = "0.2.0", path = "crates/claw10-memory" }
claw10-mission = { version = "0.2.0", path = "crates/claw10-mission" }
claw10-model-router = { version = "0.2.0", path = "crates/claw10-model-router" }
claw10-policy = { version = "0.2.0", path = "crates/claw10-policy" }
claw10-prompt = { version = "0.2.0", path = "crates/claw10-prompt" }
claw10-scheduler = { version = "0.2.0", path = "crates/claw10-scheduler" }
claw10-skill = { version = "0.2.0", path = "crates/claw10-skill" }
claw10-spawn = { version = "0.2.0", path = "crates/claw10-spawn" }
claw10-store = { version = "0.2.0", path = "crates/claw10-store" }
claw10-task = { version = "0.2.0", path = "crates/claw10-task" }
claw10-telemetry = { version = "0.2.0", path = "crates/claw10-telemetry" }
claw10-tool = { version = "0.2.0", path = "crates/claw10-tool" }
claw10-toon = { version = "0.2.0", path = "crates/claw10-toon" }
claw10-tui = { version = "0.2.0", path = "crates/claw10-tui" }
claw10-worker = { version = "0.2.0", path = "crates/claw10-worker" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
