[package]
name = "claw10-tests"
version.workspace = true
edition = "2024"
publish = false

[features]
default = []
nats = ["claw10-event/nats", "claw10-control-api/nats"]

[dependencies]
claw10-domain = { path = "../crates/claw10-domain" }
claw10-auth = { path = "../crates/claw10-auth" }
claw10-lineage = { path = "../crates/claw10-lineage" }
claw10-spawn = { path = "../crates/claw10-spawn" }
claw10-lifecycle = { path = "../crates/claw10-lifecycle" }
claw10-scheduler = { path = "../crates/claw10-scheduler" }
claw10-worker = { path = "../crates/claw10-worker" }
claw10-policy = { path = "../crates/claw10-policy" }
claw10-memory = { path = "../crates/claw10-memory" }
claw10-gateway = { path = "../crates/claw10-gateway" }
claw10-store = { path = "../crates/claw10-store" }
claw10-control-api = { path = "../crates/claw10-control-api" }
claw10-telemetry = { path = "../crates/claw10-telemetry" }
claw10-agent = { path = "../crates/claw10-agent" }
claw10-event = { path = "../crates/claw10-event" }
claw10-model-router = { path = "../crates/claw10-model-router" }
claw10-tool = { path = "../crates/claw10-tool" }
claw10-budget = { path = "../crates/claw10-budget" }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
