[package]
name = "claw10-tests"
version.workspace = true
edition = "2024"
publish = false

[features]
default = []
nats = ["claw10-event/nats", "claw10-control-api/nats"]

[dependencies]
claw10-domain = { workspace = true }
claw10-auth = { workspace = true }
claw10-lineage = { workspace = true }
claw10-spawn = { workspace = true }
claw10-lifecycle = { workspace = true }
claw10-scheduler = { workspace = true }
claw10-worker = { workspace = true }
claw10-policy = { workspace = true }
claw10-memory = { workspace = true }
claw10-gateway = { workspace = true }
claw10-store = { workspace = true }
claw10-control-api = { workspace = true }
claw10-telemetry = { workspace = true }
claw10-agent = { workspace = true }
claw10-event = { workspace = true }
claw10-model-router = { workspace = true }
claw10-tool = { workspace = true }
claw10-budget = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
