[package]
name = "claw10-agent"
version.workspace = true
edition = "2024"
description = "Agent runtime and execution for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
claw10-tool = { workspace = true }
claw10-model-router = { workspace = true }
claw10-budget = { workspace = true }
claw10-lifecycle = { workspace = true }
claw10-store = { workspace = true }
claw10-policy = { workspace = true }
claw10-worker = { workspace = true }
claw10-prompt = { workspace = true }
claw10-context = { workspace = true }
claw10-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
