[package]
name = "claw10-artifact"
version.workspace = true
edition = "2024"

[dependencies]
claw10-domain = { path = "../claw10-domain" }
claw10-store = { path = "../claw10-store" }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tokio = { workspace = true }
