[package]
name = "claw10"
version.workspace = true
edition = "2024"

[dependencies]
claw10-domain = { path = "../claw10-domain" }
claw10-control-api = { path = "../claw10-control-api" }
claw10-mission = { path = "../claw10-mission" }
claw10-task = { path = "../claw10-task" }
claw10-lineage = { path = "../claw10-lineage" }
claw10-spawn = { path = "../claw10-spawn" }
claw10-budget = { path = "../claw10-budget" }
claw10-store = { path = "../claw10-store" }
claw10-tui = { path = "../claw10-tui" }
claw10-model-router = { path = "../claw10-model-router" }
claw10-agent = { path = "../claw10-agent" }
claw10-worker = { path = "../claw10-worker" }
claw10-tool = { path = "../claw10-tool" }
reqwest = { workspace = true, features = ["blocking"] }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
