[package]
name = "claw10"
version.workspace = true
edition = "2024"
description = "Claw10 OS - Recursive Agent Swarm Operating System CLI"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
claw10-control-api = { workspace = true }
claw10-mission = { workspace = true }
claw10-task = { workspace = true }
claw10-lineage = { workspace = true }
claw10-spawn = { workspace = true }
claw10-budget = { workspace = true }
claw10-store = { workspace = true }
claw10-tui = { workspace = true }
claw10-model-router = { workspace = true }
claw10-agent = { workspace = true }
claw10-worker = { workspace = true }
claw10-tool = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
