[package]
name = "claw10-context"
version.workspace = true
edition = "2024"

[dependencies]
claw10-domain = { path = "../claw10-domain" }
claw10-toon = { path = "../claw10-toon" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
