[package]
name = "claw10-control-api"
version.workspace = true
edition = "2024"

[dependencies]
claw10-domain = { path = "../claw10-domain" }
claw10-mission = { path = "../claw10-mission" }
claw10-task = { path = "../claw10-task" }
claw10-lineage = { path = "../claw10-lineage" }
claw10-spawn = { path = "../claw10-spawn" }
claw10-budget = { path = "../claw10-budget" }
claw10-lifecycle = { path = "../claw10-lifecycle" }
claw10-scheduler = { path = "../claw10-scheduler" }
claw10-worker = { path = "../claw10-worker" }
claw10-policy = { path = "../claw10-policy" }
claw10-icvs = { path = "../claw10-icvs" }
claw10-memory = { path = "../claw10-memory" }
claw10-gateway = { path = "../claw10-gateway" }
claw10-skill = { path = "../claw10-skill" }
claw10-artifact = { path = "../claw10-artifact" }
claw10-store = { path = "../claw10-store" }
claw10-agent = { path = "../claw10-agent" }
claw10-event = { path = "../claw10-event" }
claw10-telemetry = { path = "../claw10-telemetry" }
claw10-model-router = { path = "../claw10-model-router" }
claw10-tool = { path = "../claw10-tool" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

nats = { workspace = true, optional = true }

[features]
default = []
nats = ["claw10-event/nats", "dep:nats"]
