[package]
name = "claw10-control-api"
version.workspace = true
edition = "2024"
description = "HTTP control API for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
claw10-mission = { workspace = true }
claw10-task = { workspace = true }
claw10-lineage = { workspace = true }
claw10-spawn = { workspace = true }
claw10-budget = { workspace = true }
claw10-lifecycle = { workspace = true }
claw10-scheduler = { workspace = true }
claw10-worker = { workspace = true }
claw10-policy = { workspace = true }
claw10-icvs = { workspace = true }
claw10-memory = { workspace = true }
claw10-gateway = { workspace = true }
claw10-skill = { workspace = true }
claw10-artifact = { workspace = true }
claw10-store = { workspace = true }
claw10-agent = { workspace = true }
claw10-event = { workspace = true }
claw10-telemetry = { workspace = true }
claw10-model-router = { workspace = true }
claw10-tool = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

nats = { workspace = true, optional = true }

[features]
default = []
nats = ["claw10-event/nats", "dep:nats"]
