[package]
name = "claw10-domain"
version.workspace = true
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
derivative = { workspace = true }
strum = { workspace = true }
