[package]
name = "claw10-domain"
version.workspace = true
edition = "2024"
description = "Domain models and types for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
schemars = { workspace = true }
derivative = { workspace = true }
strum = { workspace = true }
