[package]
name = "claw10-event"
version.workspace = true
edition = "2024"
description = "Event bus abstraction for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# NATS (optional — aktif hanya di fitur nats)
nats = { workspace = true, optional = true }

[features]
default = []
nats = ["dep:nats"]
