[package]
name = "claw10-icvs"
version.workspace = true
edition = "2024"
description = "ICVS compiler wrapper for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
icvs.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
