[package]
name = "claw10-lineage"
version.workspace = true
edition = "2024"
description = "Agent lineage tracking for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
