[package]
name = "claw10-model-router"
version.workspace = true
edition = "2024"

[dependencies]
claw10-domain = { path = "../claw10-domain" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true, features = ["stream"] }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
