[package]
name = "claw10-model-router"
version.workspace = true
edition = "2024"
description = "LLM provider routing for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true, features = ["stream"] }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
