[package]
name = "claw10-policy"
version.workspace = true
edition = "2024"
description = "Policy evaluation for Claw10 agents"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
