[package]
name = "claw10-prompt"
version.workspace = true
edition.workspace = true
description = "Prompt assembly for Claw10 agents"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
claw10-toon = { workspace = true }
claw10-icvs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"
schemars = { workspace = true }
async-trait = { workspace = true }
strum = { workspace = true }
