[package]
name = "claw10-skill"
version.workspace = true
edition = "2024"
description = "Skill registry for Claw10 agents"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
claw10-store = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
