[package]
name = "claw10-spawn"
version.workspace = true
edition = "2024"
description = "Agent spawn broker for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-domain = { workspace = true }
claw10-auth = { workspace = true }
claw10-budget = { workspace = true }
claw10-lineage = { workspace = true }
claw10-store = { workspace = true }
claw10-agent = { workspace = true }
claw10-event = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
