[package]
name = "claw10-tui"
version.workspace = true
edition = "2024"
description = "Terminal UI for Claw10 OS"
license.workspace = true
authors.workspace = true
repository = "https://github.com/crediblemark-official/claw10"

[dependencies]
claw10-control-api = { workspace = true }
claw10-domain = { workspace = true }
claw10-store = { workspace = true }
claw10-model-router = { workspace = true }
claw10-agent = { workspace = true }
claw10-budget = { workspace = true }
claw10-tool = { workspace = true }
claw10-worker = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"

